<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/config_title_label" />
        <EditText android:id="@+id/config_title_edit"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/config_last_label" />
        <DatePicker android:id="@+id/config_last_edit"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/config_interval_label" />
        <EditText android:id="@+id/config_interval_edit"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:inputType="number" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/config_count_label" />
        <EditText android:id="@+id/config_count_edit"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:inputType="number"
                  android:text="0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <Button android:id="@+id/config_ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_ok_label" />
        <Button android:id="@+id/config_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_cancel_label"
                android:layout_marginLeft="50dip" />
    </LinearLayout>

</LinearLayout>