<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_widget"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/widget_bg_normal">
    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginTop="12dip"
        android:text="@string/done_button"/>
    <LinearLayout android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">
        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dip"
            android:text="@string/unknown_title"
            style="@style/Text.Title"/>
        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:text="@string/unknown_info"
            style="@style/Text"/>
    </LinearLayout>
</LinearLayout>